--- a/www/public/contact.html
+++ b/www/public/contact.html
@@ -7,14 +7,14 @@
     <title>Contact Us</title>
 </head>
 <body>
-
     <header>
         <h1>Contact Us</h1>
     </header>
 
+    <div id="menuIcon" class="menu-icon" onclick="toggleMenu()">&#9776;</div> <!-- Move the menu icon outside the sidebar -->
+
     <div class="wrapper">
         <div id="sidebar">
-            <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
             <div class="user-image">
                 <img id="profile-img" src="" alt="User Image">
             </div>
