--- a/www/public/index.html
+++ b/www/public/index.html
@@ -65,6 +65,6 @@
         window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
     </script>
     <script defer src="/_vercel/insights/script.js"></script>
-    <script src="/js/indexScripts.js"></script>
+    <script src="js/indexScripts.js"></script>
 </body>
 </html>
