--- a/www/public/ai_technologies.html
+++ b/www/public/ai_technologies.html
@@ -22,7 +22,7 @@
             </div>
             <nav id="menuItems">
                 <ul>
-                    <li><a href="/home">Home</a></li>
+                    <li><a href="/landing-page">Home</a></li>
                     <li><a href="/ai_technologies">AI Technologies</a></li>
                     <li><a href="/contact">Contact</a></li>
                     <li><a href="/profile">Profile</a></li>
@@ -34,7 +34,7 @@
         <main id="main">
             <section id="home">
                 <h2 id="pageTitle">AI Technologies</h2>
-                <p id="pageContent">Welcome to our AI Technologies website. Explore the latest advancements in artificial intelligence.</p>
+                <p id="pageContent">Welcome to AI Technologies. Explore the latest advancements in artificial intelligence.</p>
                 <p><a href="ai_technologies.html">Learn more about AI Technologies</a></p>
             </section>
         </main>
