--- a/www/public/contact.html
+++ b/www/public/contact.html
@@ -21,11 +21,11 @@
             <h2 class="user-name"></h2>
             <nav>
                 <ul>
-                    <li><a href="test.html">Home</a></li>
+                    <li><a href="/landing-page">Home</a></li>
                     <li><a href="ai_technologies.html">AI Technologies</a></li>
                     <li><a href="/contact">Contact</a></li>
                     <li><a href="/profile">Profile</a></li>
-                    <li><a href="/login" onclick="logout()">Logout</a></li>
+                    <li><a href="#" onclick="logout()">Logout</a></li>
                 </ul>
             </nav>
         </div>
