--- a/www/public/EditProfile.html
+++ b/www/public/EditProfile.html
@@ -4,49 +4,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Profile Card</title>
+    <title>Edit User Profile</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/EditProfileStyles.css">
 </head>
 <body>
+    <div class="background-overlay"></div>
     <div class="card-container">
         <div class="card-top-navigation">
             <ul>
                 <li>
-                    <i class="fa-solid fa-arrow-left"></i>
+                    <a href="/profile"><i class="fa-solid fa-arrow-left"></i></a>
                 </li>
             </ul>
+            <div class="theme-toggle">
+                <input type="checkbox" id="theme-switch" class="theme-switch">
+                <label for="theme-switch" class="theme-switch-label">
+                    <i class="fas fa-sun"></i>
+                    <i class="fas fa-moon"></i>
+                </label>
+            </div>
         </div>
         <div class="user-image">
             <input type="file" id="profile-image" name="profile-image">
             <label for="profile-image"><i class="fa fa-camera"></i></label>
             <img id="profile-img" src="images/default-profile.png" alt="User Image">
         </div>
-        <div>
+        <div class="form-group">
             <label for="username">Username:</label>
-            <input type="text" id="username" name="username">
+            <input type="text" id="username" name="username" required>
+            <span class="validation-icon"></span>
         </div>
-        <div>
+        <div class="form-group">
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email" >
+            <input type="email" id="email" name="email" required>
+            <span class="validation-icon"></span>
         </div>
-        <div>
+        <div class="form-group">
             <label for="about">About:</label>
             <textarea id="about" name="about" rows="5" cols="50"></textarea>
         </div>
-        <button class="save">Save</button>
+        <button class="save">
+            <span class="button-text">Save Changes</span>
+            <span class="loader"></span>
+        </button>
         <div class="social-container">
-            <a href="#" class="social-item instagram">
-                <i class="fa-brands fa-instagram"></i>
-            </a>
-            <a href="#" class="social-item youtube">
-                <i class="fa-brands fa-youtube"></i>
-            </a>
-            <a href="#" class="social-item twitter">
-                <i class="fa-brands fa-twitter"></i>
-            </a>
+            <div class="social-item steam">
+                <i class="fa-brands fa-steam"></i>
+            </div>
+            <div class="social-item twitch">
+                <i class="fa-brands fa-twitch"></i>
+            </div>
+            <div class="social-item discord">
+                <i class="fa-brands fa-discord"></i>
+            </div>
         </div>
     </div>
     <script src="js/EditScript.js"></script>
