--- a/www/public/index.html
+++ b/www/public/index.html
@@ -64,7 +64,9 @@
     <script>
         window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
     </script>
+    <!-- Commenting out for now
     <script defer src="/_vercel/insights/script.js"></script>
+    -->
     <script src="js/indexScripts.js"></script>
 </body>
 </html>
