--- a/www/public/contact.html
+++ b/www/public/contact.html
@@ -1,47 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/contact-styles.css">
-    <title>Contact Us</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Contact Us - GameGrove</title>
+        <link rel="stylesheet" href="css/contact-styles.css">
+        <link rel="icon" type="image/png" href="images/Logo.png">
+    </head>
+    
 <body>
     <header>
-        <h1>Contact Us</h1>
-    </header>
-
-    <div id="menuIcon" class="menu-icon" onclick="toggleMenu()">&#9776;</div> <!-- Move the menu icon outside the sidebar -->
-
-    <div class="wrapper">
-        <div id="sidebar">
-            <div class="user-image">
-                <img id="profile-img" src="" alt="User Image">
+        <div class="container">
+            <div class="logo">
+                <img src="images/Logo.png" alt="">
+                <h1>GameGrove</h1>
             </div>
-            <h2 class="user-name"></h2>
-            <nav>
+            <button class="menu-toggle">
+                <span class="bar"></span>
+            </button>
+            <nav class="sidebar">
                 <ul>
                     <li><a href="/landing-page">Home</a></li>
-                    <li><a href="ai_technologies.html">AI Technologies</a></li>
-                    <li><a href="/contact">Contact</a></li>
+                    <li><a href="/about">About</a></li>
                     <li><a href="/profile">Profile</a></li>
-                    <li><a href="#" onclick="logout()">Logout</a></li>
                 </ul>
             </nav>
+            
         </div>
+    </header>    
 
-        <main>
+    <div class="hero">
+        <div class="container">
+            <h2>Contact Us</h2>
+        </div>
+    </div>
+
+    <div class="main-content">
+        <div class="container">
             <section id="contact">
-                <h2>Contact Us</h2>
-                <p>Have questions or want to learn more? Contact us at info@example.com</p>
+                <div class="contact-info">
+                    <p>Have questions or want to learn more? Contact us at <a href="mailto:info@example.com">info@example.com</a></p>
+                </div>
             </section>
-        </main>
+        </div>
     </div>
 
     <footer>
-        <p>&copy; 2023 AI Technologies. All rights reserved.</p>
+        <div class="container">
+            <p>&copy; 2023 GameGrove. All rights reserved.</p>
+            <div class="social-media">
+                <a href="#">Facebook</a>
+                <a href="#">Twitter</a>
+                <a href="#">Instagram</a>
+            </div>
+        </div>
     </footer>
-
     <script src="js/contact-script.js"></script>
 </body>
 </html>
