--- a/www/public/EditProfile.html
+++ b/www/public/EditProfile.html
@@ -9,6 +9,7 @@
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/EditProfileStyles.css">
+    <link rel="icon" type="image/png" href="images/Logo.png">
 </head>
 <body>
     <div class="background-overlay"></div>
