--- a/www/public/about.html
+++ b/www/public/about.html
@@ -6,15 +6,28 @@
     <title>About Us - GameGrove</title>
     <link rel="stylesheet" href="css/aboutStyles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" type="image/png" href="images/Logo.png">
 </head>
 <body>
+    <div class="sidebar">
+        <a href="#" class="close-btn">&times;</a>
+        <a href="/laanding-page"><i class="fas fa-home"></i> Home</a>
+        <a href="/about"><i class="fas fa-info-circle"></i> About</a>
+        <a href="/contact"><i class="fas fa-envelope"></i> Contact</a>
+        <a href="/login" id="sidebar-login-link"><i class="fas fa-user"></i> Login</a>
+    </div>
+
     <header>
         <nav>
-            <div class="logo">GameGrove</div>
-            <ul>
-                <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="about.html"><i class="fas fa-info-circle"></i> About</a></li>
-                <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
+            <div class="logo">
+                <img src="images/Logo.png" alt="GameGrove Logo">
+                <span>GameGrove</span>
+            </div>
+            <div class="menu-icon">&#9776;</div>
+            <ul class="desktop-nav">
+                <li><a href="/landing-page"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="/about"><i class="fas fa-info-circle"></i> About</a></li>
+                <li><a href="/contact"><i class="fas fa-envelope"></i> Contact</a></li>
                 <li><a href="/login" id="login-link"><i class="fas fa-user"></i> Login</a></li>
             </ul>
         </nav>
@@ -53,18 +66,18 @@
             <div class="team-grid">
                 <div class="team-member">
                     <img src="images/team-member-1.png" alt="Jane Doe">
-                    <h3>Jane Doe</h3>
-                    <p>CEO & Founder</p>
+                    <h3>Hamza Khan</h3>
+                    <p>CEO & Founder, Lead Developer</p>
                 </div>
                 <div class="team-member">
                     <img src="images/team-member-2.png" alt="John Smith">
-                    <h3>John Smith</h3>
-                    <p>Lead Developer</p>
+                    <h3>Sabhi Bangash</h3>
+                    <p>Chief Motivational Officer</p>
                 </div>
                 <div class="team-member">
-                    <img src="images/team-member-3.jpeg" alt="Emily Brown">
-                    <h3>Emily Brown</h3>
-                    <p>Community Manager</p>
+                    <img src="images/team-member-3.jpeg" alt="Miss Kainat">
+                    <h3>Miss Kainat</h3>
+                    <p>Head of Support and Assistance</p>
                 </div>
             </div>
         </div>
