--- a/www/public/ai_technologies.html
+++ b/www/public/ai_technologies.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/ai-page-styles.css">
     <title>AI Technologies</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-xxx" crossorigin="anonymous" />
+    <link rel="icon" type="image/png" href="images/Logo.png">
 </head>
 <body>
 
