--- a/www/public/register.html
+++ b/www/public/register.html
@@ -7,9 +7,23 @@
     <title>Register</title>
     <link rel="stylesheet" href="css/registeration-styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-SZXxX4whJ79/gErwcOYfzMEY5s1xsG6E0r7F9DPLqdb8MAc/iQyn1TnF9ZZT2NV4" crossorigin="anonymous">
+    <link rel="icon" type="image/png" href="images/Logo.png">
 </head>
 
 <body>
+    <header>
+        <div id="particles-js"></div>
+        <div class="logo">
+            <img src="images/Logo-Purple.png" alt="Logo">
+            <h1>GameGrove</h1>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="/"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="/contact"><i class="fas fa-envelope"></i> Contact</a></li>
+          </ul>
+        </nav>
+    </header>
     <div class="registration-container">
         <div class="registration-box">
             <center><h2>Register</h2></center>
