--- a/www/public/about.html
+++ b/www/public/about.html
@@ -11,10 +11,10 @@
 <body>
     <div class="sidebar">
         <a href="#" class="close-btn">&times;</a>
-        <a href="/laanding-page"><i class="fas fa-home"></i> Home</a>
+        <a href="/landing-page"><i class="fas fa-home"></i> Home</a>
         <a href="/about"><i class="fas fa-info-circle"></i> About</a>
         <a href="/contact"><i class="fas fa-envelope"></i> Contact</a>
-        <a href="/login" id="sidebar-login-link"><i class="fas fa-user"></i> Login</a>
+        <a href="" id="sidebar-login-link"><i class="fas fa-user"></i></a>
     </div>
 
     <header>
@@ -67,11 +67,11 @@
                 <div class="team-member">
                     <img src="images/team-member-1.png" alt="Jane Doe">
                     <h3>Hamza Khan</h3>
-                    <p>CEO & Founder, Lead Developer</p>
+                    <p>CEO, Founder & Lead Developer</p>
                 </div>
                 <div class="team-member">
                     <img src="images/team-member-2.png" alt="John Smith">
-                    <h3>Sabhi Bangash</h3>
+                    <h3>Sabeeh Bangash</h3>
                     <p>Chief Motivational Officer</p>
                 </div>
                 <div class="team-member">
