--- a/www/public/games.html
+++ b/www/public/games.html
@@ -16,22 +16,22 @@
             </div>
             <div class="menu-icon" onclick="openNav()">&#9776;</div>
             <ul class="desktop-nav">
-                <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="about.html"><i class="fas fa-info-circle"></i> About</a></li>
-                <li><a href="games.html"><i class="fas fa-gamepad"></i> Games</a></li>
-                <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
+                <li><a href="/landing-page"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="/about"><i class="fas fa-info-circle"></i> About</a></li>
+                <li><a href="/games"><i class="fas fa-gamepad"></i> Games</a></li>
+                <li><a href="/contact"><i class="fas fa-envelope"></i> Contact</a></li>
                 <li><a href="/login" id="login-link"><i class="fas fa-user"></i> Login</a></li>
             </ul>
         </nav>
     </header>
 
-    <div id="mySidebar" class="sidebar">
+    <div id="mySidebar" secret="ifYouFoundThisYouAreHidingSomething" class="sidebar">
         <a href="javascript:void(0)" class="close-btn" onclick="closeNav()">&times;</a>
-        <a href="index.html"><i class="fas fa-home"></i> Home</a>
-        <a href="about.html"><i class="fas fa-info-circle"></i> About</a>
-        <a href="games.html"><i class="fas fa-gamepad"></i> Games</a>
-        <a href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
-        <a href="/login" id="login-link"><i class="fas fa-user"></i> Login</a>
+        <li><a href="/landing-page"><i class="fas fa-home"></i> Home</a></li>
+        <li><a href="/about"><i class="fas fa-info-circle"></i> About</a></li>
+        <li><a href="/games"><i class="fas fa-gamepad"></i> Games</a></li>
+        <li><a href="/contact"><i class="fas fa-envelope"></i> Contact</a></li>
+        <li><a href="/login" id="login-link"><i class="fas fa-user"></i> Login</a></li>
     </div>
 
     <main class="games-page">
