--- a/www/public/contact.html
+++ b/www/public/contact.html
@@ -22,7 +22,7 @@
                 <ul>
                     <li><a href="/landing-page">Home</a></li>
                     <li><a href="/about">About</a></li>
-                    <li><a href="/profile">Profile</a></li>
+                    <li><a href="/games">Games</a></li>
                 </ul>
             </nav>
             
